# contextor

./: .cursorignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  TODO.md  docker-compose.yml  pyproject.toml  serverless.yml  test_config_detection.json  test_metrics_sample.md
.cursor/rules/: development-standards.mdc  py-latest-versions.mdc
.github/workflows/: ci.yml  sourcedocs-matrix.yml
api/: mcp.py
config/: CONFIG_SCHEMA.md  README.md  intelligence.example.yaml  optimize.example.yaml  optimize.sample.yaml  project.example.json
config/profiles/: README.md  nextjs.yaml  react.yaml  tailwindcss.yaml  vite.yaml  vscode.yaml
config/projects/: README.md  modelcontextprotocol.json  nextjs.json  react.json  shadcn.json  tailwindcss.json  testcontext7project.json  vite.json  vscode.json
contextor/: __init__.py  __main__.py  benchmark.py  emit.py  loader.py  logging_config.py  project_config.py  utils.py
contextor/intelligence/: __init__.py  analyzer.py  cross_linking.py  quality_scoring.py  similarity.py  topic_extraction.py
contextor/mcp_server/: __init__.py  __main__.py  handlers.py  server.py  tools.py
contextor/serverless/: __init__.py  lambda_handler.py  vercel_handler.py
contextor/transforms/: __init__.py  links.py  markdown_norm.py  mdx_clean.py  size.py
docs/: CLI_USAGE.md  TODO.md  getting-started.md  quickstart-mcp-server.md
docs/architecture/: architecture.md  principles.md  structure.md
docs/architecture/decisions/: register.md
docs/architecture/design/: FDD-001-content-intelligence.md  SDD-001-content-intelligence.md  SDD-002-parallel-processing.md  advanced-content-intelligence.md  index.md
docs/deployment/: docker-guide.md
docs/mcp-server/: IMPLEMENTATION_SUMMARY.md  mcp-server-design.md
docs/model-context-protocol/: markdown-for-llms.md  mcp-integration.md
docs/templates/: README.md  api-documentation.md  deployment-guide.md  feature-design-doc.md  monitoring-guide.md  project-template.md  runbook.md  security-policy.md
docs/tutorials/: end-to-end-workflow.md
docs/user-guide/: cli-reference.md
scripts/: count_tokens.py  deploy.sh
test_context7_repo/: context7.json
test_context7_repo/docs/: test.md
tests/: __init__.py  test_emit.py  test_intelligence.py  test_loader.py  test_mcp_server.py  test_transforms.py  test_utils.py
tests/fixtures/: large-code.md  sample.md  sample.mdx
